# hearth

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
api-server/core/: settings.py
docker/: Dockerfile  docker-compose.yaml
docs/: future_customization_ideas.md  python_programming_concepts_to_solidify.md
helm/hearth-chart/: Chart.yaml  values.yaml
helm/hearth-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/hearth-chart/templates/tests/: test-connection.yaml
requirements/: dev-requirements.txt  requirements.txt
scripts/: entrypoint.sh  nginx.conf  startup.sh
src/app/: main.py
terraform/: README.md  main.tf  terraform_learn.md
